# buyback-toolkit

./: benchmark.py  constants.py  eval.py  monte_carlo.py  pyproject.toml  strategy.py  volatility.py  volume.py
.github/workflows/: python-package.yml
buyback/: volume.py
tests/: test_monte_carlo.py  test_volatility.py
