[tool.poetry]
name = "buyback"
version = "0.1.0"
description = "A Python toolkit for simulating and analyzing share buyback strategies"
authors = ["Rob Chiocchio <rmchiocchio@wpi.edu>"]
readme = "README.md"
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
